--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "mainClass": "BayesWorld",
             "projectName": "470-Bayes-Filter_e066175d",
             "cwd": "${workspaceFolder}/Server",
-            "args": ["mundo_maze.txt", "1.0", "1.0", "known"]
+            "args": ["mundo_15_15.txt", "0.9", "0.8", "unknown"]
         },
         {
             "type": "java",
@@ -26,7 +26,7 @@
             "mainClass": "theRobot",
             "projectName": "470-Bayes-Filter_e066175d",
             "cwd": "${workspaceFolder}/Robot",
-            "args": ["automatic", "250"]
+            "args": ["automatic", "500"]
         }
     ]
 }
